pod_httpd.yml
apiVersion: v1
kind: Pod
metadata:
  name: httpd
  labels:
    name: httpd
spec:
  containers:
    - name: httpd
      image: quay.io/satishchennu1/httpdapp
      ports:
        - name: web
          containerPort: 8080
