route-httpd.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: httpd2
  name: httpd2
spec:
  host: myhttpd-httpd.apps.ocppoliot.ocpcontainer.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: httpd
    weight: 100
